# space

./: ATTRIBUTE  CMakeLists.txt  README.md
cmake/: FindPugiXML.cmake  FindSDL2_Image.cmake  FindSDL2_Mixer.cmake  FindSDL2_Net.cmake
data/images/: Ship1.kra
include/: main.h
include/engine/: gameengine.h  graphicsengine.h  inputengine.h  networkengine.h  soundengine.h
include/load/: load.h  loadsound.h
include/utilities/: commandline.h  enums.h  logging.h  typedefs.h
src/: main.cpp
src/engine/: gameengine.cpp  graphicsengine.cpp  inputengine.cpp  networkengine.cpp  soundengine.cpp
src/load/: load.cpp  loadsound.cpp
src/utilities/: commandline.cpp  logging.cpp
